add_subdirectory(compiler-plugins)
add_subdirectory(amdgpu)
add_subdirectory(llvm)
add_subdirectory(comgr)
add_subdirectory(rocprofiler-sdk)
add_subdirectory(object)
add_subdirectory(common)
add_subdirectory(hsa)
add_subdirectory(hip)
add_subdirectory(intrinsic)
add_subdirectory(tooling_common)
add_subdirectory(klee)
add_subdirectory(tooling)